<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D6DBDF"
    tools:context=".ProfileActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/me"
        android:layout_marginStart="100sp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40sp"
        android:contentDescription="@string/todo" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/name"
            android:textSize="50sp"
            android:textColor="@color/colorPrimaryDark"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:contentDescription="TODO"
                android:src="@drawable/track_24dp"
                 />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="24sp"
                android:layout_margin="10dp"
                android:text="@string/trackk"
                android:textColor="@color/colorPrimaryDark"
                 />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="24sp"
                android:layout_margin="10dp"
                android:text="@string/track"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/country_24dp"
                />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/countryy"
                android:textColor="@color/colorPrimaryDark"
                />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/country"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                 />

        </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="50dp">

           <ImageView
               android:id="@+id/imageView7"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:src="@drawable/email_24dp"
                />

           <TextView
               android:id="@+id/textView11"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:text="@string/email"
               android:textColor="@color/colorPrimaryDark"
                />

           <TextView
               android:id="@+id/textView12"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:text="@string/mail"
               android:textColor="@color/colorPrimary"
               android:textSize="16dp" />


       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="50dp">

           <ImageView
               android:id="@+id/imageView8"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:src="@drawable/phone_24dp"
                />

           <TextView
               android:id="@+id/textView13"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:text="@string/phone"
               android:textColor="@color/colorPrimaryDark"
                />

           <TextView
               android:id="@+id/textView15"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:text="@string/number"
               android:textColor="@color/colorPrimary"
               android:textSize="16dp"
               />

       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/social_24dp"
                 />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/social"
                android:textColor="@color/colorPrimaryDark"
                />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/slack"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                 />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>